updated video gallery and fixed div overflow problem

--- a/css/main.scss
+++ b/css/main.scss
@@ -16,6 +16,10 @@ ul {
 
 .inclusiveGrid {
   grid-template-columns: repeat(2, auto) !important;
+  padding-left: 5% !important;
+  padding-right: 5% !important;
+  column-gap: 5% !important;
+  row-gap: 20px !important;
 }
 
 video {
@@ -24,25 +28,33 @@ video {
 
 #video1 {
   order: 1;
+  align-self: center;
 }
 
 #video2 {
   order: 4;
+  align-self: center;
 }
 
 #video3 {
   order: 5;
+  align-self: center;
 }
 
 #video4 {
   order: 8;
+  align-self: center;
 }
 
 #textVideo1 {
+  h1 {
+    margin: 0;
+  }
   display: flex;
   justify-content: center;
   flex-flow: column wrap;
   order: 2;
+  align-self: flex-start;
 }
 
 #textVideo2 {
@@ -115,6 +127,10 @@ video {
     width: 500px;
     max-width: 100%;
     height: 100%;
+    transition: all 1s ease-in-out;
+    &:hover {
+      transform: scale(1.03);
+    }
   }
 }
 
@@ -252,9 +268,6 @@ video {
   #title {
     background-image: url("../img/assests/375p.jpg");
   }
-  .homePageGrid {
-    grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr)) !important;
-  }
   .mainNav {
     li {
       margin-left: 0;
@@ -271,9 +284,6 @@ video {
   }
   #title {
     background-image: url("../img/assests/320p.jpg");
-  }
-  .homePageGrid {
-    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr)) !important;
   }
 }
 
@@ -330,6 +340,7 @@ video {
 }
 
 #main {
+  overflow-x: hidden;
   width: 100%;
   height: auto;
   padding-left: 20%;
@@ -434,6 +445,7 @@ img {
 .dropdown {
   position: relative;
   display: inline-block;
+  transition: all 1s ease-in-out;
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -456,12 +468,14 @@ img {
 }
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-  display: flex;
-  justify-content: flex-start;
-  flex-flow: column wrap;
-  align-items: flex-start;
-  text-align: initial;
+.dropdown:hover {
+  .dropdown-content {
+    display: flex;
+    justify-content: flex-start;
+    flex-flow: column wrap;
+    align-items: flex-start;
+    text-align: initial;
+  }
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown 
